Finished the homework with java doc